fix overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,15 +53,11 @@
     );
   }
   .gradiente-h {
-<<<<<<< Updated upstream
-    background: linear-gradient(90deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0) 70%);
-=======
     background: linear-gradient(
       90deg,
       rgba(0, 0, 0, 0.7) 0%,
-      rgba(0, 0, 0, 0.2) 70%
+      rgba(0, 0, 0, 0) 70%
     );
->>>>>>> Stashed changes
   }
 
   .whats {
